--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 .header {
   padding: 10px;
-  height: 16vh;
+  height: 12vh;
   justify-content: space-between;
   background-color: rgba(255, 153, 0, 0.323);
 }
@@ -32,8 +32,8 @@ body {
 }
 
 #cleartripIcon {
-  height: 5vh;
-  width: 20vw;
+  height: 10vh;
+  width: 30vw;
   object-fit: contain;
   margin-left: 10px;
 }
@@ -44,12 +44,30 @@ body {
   margin-right: 10px;
 }
 #userIcon {
-  height: 10px;
-  width: 20px;
+  height: 20px;
+  width: 30px;
   object-fit: contain;
 }
 .cleartripLogin {
   display: flex;
   justify-content: space-between;
   margin: 10px;
+}
+.icon {
+  height: 40px;
+  width: 40px;
+  object-fit: contain;
+}
+.bodyIcons {
+  display: flex;
+  justify-content: space-around;
+}
+.bodyIconText {
+  font-size: 1.5rem;
+}
+
+.iconContainer {
+  width: 150px;
+  display: flex;
+  /* justify-content: space-between; */
 }
