--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 .header {
   padding: 10px;
-  height: 15vh;
+  height: 20vh;
   justify-content: space-between;
   background-color: rgba(255, 153, 0, 0.323);
 }
@@ -23,13 +23,17 @@ body {
   background-color: black;
   color: white;
   border-radius: 5px;
-  font-size: 0.7rem;
-  width: 100px;
-  height: 30px;
+  font-size: 1rem;
+  width: 150px;
+  height: 50px;
   cursor: pointer;
 }
 
-.switchToApp:hover {
+#switchToApp:hover {
+  background-color: white;
+  color: black;
+}
+#switchToApp:active {
   background-color: white;
   color: black;
 }
@@ -88,7 +92,7 @@ h5 {
   display: flex;
   justify-content: space-between;
   margin: 0;
-  gap: 180px;
+  gap: 150px;
 }
 .bodyElement {
   margin-top: 10px;
