--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   padding: 10px;
   height: 20vh;
   justify-content: space-between;
-  background-color: rgba(255, 153, 0, 0.323);
+  background-color: rgba(248, 155, 34, 0.477);
 }
 .header_element {
   margin-bottom: 10px;
@@ -131,7 +131,14 @@ input {
 }
 
 #footerItems {
-  display: flex;
-  flex-direction: column;
   gap: 100px;
+}
+#dateSearched {
+  display: flex;
+  width: 150px;
+  height: 50px;
+  margin-left: 10px;
+  background-color: rgba(128, 128, 128, 0.153);
+  color: rgb(19, 102, 174);
+  margin-bottom: 20px;
 }
