--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 .header {
   padding: 10px;
   height: 20vh;
-  justify-content: space-between;
+  justify-content: space-evenly;
   background-color: rgba(248, 155, 34, 0.477);
 }
 .header_element {
@@ -107,13 +107,18 @@ input {
 
 #searchButton {
   width: 100vw;
-  height: 40px;
+  height: 50px;
   background-color: rgb(247, 119, 40);
   border: none;
   color: white;
   font-size: 1.1rem;
   font-weight: bold;
 }
+#searchButton:active {
+  background-color: white;
+  color: rgb(247, 119, 40);
+}
+
 #searchContainer {
   display: flex;
 }
@@ -136,9 +141,10 @@ input {
 #dateSearched {
   display: flex;
   width: 150px;
-  height: 50px;
+  height: 80px;
   margin-left: 10px;
   background-color: rgba(128, 128, 128, 0.153);
   color: rgb(19, 102, 174);
   margin-bottom: 20px;
+  margin: 10px;
 }
