--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   font-family: "Josefin Sans", sans-serif;
 }
 .header {
-  margin-top: 20px;
+  padding-top: 20px;
   padding: 10px;
   height: 20vh;
   justify-content: space-between;
@@ -51,6 +51,10 @@ body {
   border-radius: 15px;
   margin-right: 10px;
   border: 1px solid gray;
+  transition: transform 0.3s ease;
+}
+#loginButton.clicked {
+  transform: scale(0.8);
 }
 #userIcon {
   height: 20px;
