--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Delicious+Handrawn&family=Josefin+Sans:wght@300;400&family=Lato:wght@300&family=Montserrat:wght@300;400&family=Roboto:wght@100&family=Source+Sans+Pro:wght@300&display=swap");
 
+@font-face {
+  font-family: segoe;
+  src: local(
+    "C:\Users\lenovo\Desktop\javascript\cleartrip_assignment\Segoe UI.ttf"
+  );
+}
 * {
   margin: auto;
   box-sizing: border-box;
@@ -7,7 +13,7 @@
 
 body {
   width: 500px;
-  font-family: "Josefin Sans", sans-serif;
+  font-family: segoe;
 }
 .header {
   padding-top: 20px;
@@ -73,8 +79,8 @@ body {
   margin-top: 5px;
 }
 .icon {
-  height: 40px;
-  width: 40px;
+  height: 30px;
+  width: 30px;
   object-fit: contain;
 }
 .bodyIcons {
@@ -91,8 +97,9 @@ body {
 }
 hr {
   margin-top: 5px;
+  color: rgba(0, 0, 0, 0.107);
 }
-h5 {
+h4 {
   color: rgba(0, 0, 0, 0.642);
 }
 .bodyInput {
