--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
   border-radius: 5px;
   font-size: 1rem;
   width: 150px;
-  height: 50px;
+  height: 40px;
   cursor: pointer;
 }
 
@@ -46,8 +46,8 @@ body {
 }
 
 #cleartripIcon {
-  height: 10vh;
-  width: 30vw;
+  height: 30px;
+  width: 100px;
   object-fit: contain;
   margin-left: 10px;
 }
@@ -137,6 +137,7 @@ input {
   color: white;
   font-size: 1.1rem;
   font-weight: bold;
+  cursor: pointer;
 }
 #searchButton:active {
   background-color: white;
@@ -154,8 +155,19 @@ input {
 .footerOptions {
   display: flex;
   flex-direction: column;
-  margin: 10px;
+  margin: 5px;
+  cursor: pointer;
 }
+
+.footerOptions:hover {
+  background-color: rgb(247, 119, 40);
+  border-radius: 5px;
+}
+.footerOptions.clicked {
+  background-color: rgb(247, 119, 40);
+  border-radius: 5px;
+}
+
 #recentlySearched {
   margin: 10px;
   margin-top: 20px;
