--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
   background-color: black;
   color: white;
   border-radius: 5px;
+  border: none;
   font-size: 1rem;
   width: 150px;
   height: 40px;
@@ -55,9 +56,9 @@ body {
 #loginButton {
   background-color: white;
   display: flex;
-  padding: 5px;
+  padding: 10px;
   color: grey;
-  height: 30px;
+  height: 40px;
   width: 100px;
   border-radius: 15px;
   margin-right: 10px;
