--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ body {
   display: flex;
   justify-content: space-between;
   margin: 10px;
+  margin-bottom: 20px;
 }
 .icon {
   height: 30px;
@@ -108,7 +109,8 @@ h1 {
   font-size: 1.5rem;
 }
 h3 {
-  color: rgba(128, 128, 128, 0.584);
+  color: rgba(128, 128, 128, 0.638);
+  font-weight: normal;
 }
 .bodyInput {
   margin: 10px;
