--- a/style.css
+++ b/style.css
@@ -170,11 +170,13 @@ input {
   background-color: rgb(247, 119, 40);
   border-radius: 5px;
 }
+#footerItems {
+  margin-top: 30px;
+}
 
 #recentlySearched {
   margin: 10px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 
 #dateSearched {
