--- a/style.css
+++ b/style.css
@@ -35,7 +35,6 @@ body {
   font-size: 1rem;
   width: 150px;
   height: 40px;
-  cursor: pointer;
 }
 
 #switchToApp:active {
@@ -184,6 +183,7 @@ input {
   color: rgb(19, 102, 174);
   margin-bottom: 20px;
   margin: 10px;
+  margin-top: 5px;
 }
 #searchedPlace {
   margin-left: 10px;
